<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        class = "com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="109dp"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/system_transparent"
            android:contentDescription="@string/imagebuttonlist"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/system_transparent"
            android:contentDescription="@string/imagebuttonmap"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/system_transparent"
            android:contentDescription="@string/imagebuttonsettings"
            app:srcCompat="@drawable/settingicon" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroupMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" >

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/radioButtonSatellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Satellite" />
    </RadioGroup>
    <TextView
        android:id="@+id/textHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="WNW"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map" />

</androidx.constraintlayout.widget.ConstraintLayout>
